feat: minecraft microservice is done and create account graphql resource